--- a/Ambush/UserControls/FlippedDoor.xaml
+++ b/Ambush/UserControls/FlippedDoor.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="Ambush.UserControls.Door"
+﻿<UserControl x:Class="Ambush.UserControls.FlippedDoor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ambush.UserControls"
-             mc:Ignorable="d" Height="70.625" Width="35.875">
+             mc:Ignorable="d" Height="71.5" Width="40.833">
     <Grid Margin="0,10,558,371">
         <Ellipse Fill="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" HorizontalAlignment="Left" Height="71" Margin="-1,-10,-40,-61" VerticalAlignment="Top" Width="41"/>
-        <local:ToggleSwitch x:Name="MIDDLE" HorizontalAlignment="Left" Height="46" Margin="-1,4,-21,-50" VerticalAlignment="Top" Width="22" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="MIDDLE_MouseLeftButtonDown_1">
+        <local:ToggleSwitch x:Name="MIDDLE" HorizontalAlignment="Left" Height="46" Margin="18,4,-40,-50" VerticalAlignment="Top" Width="22" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="MIDDLE_MouseLeftButtonDown_1">
             <local:ToggleSwitch.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -17,7 +17,7 @@
                 </TransformGroup>
             </local:ToggleSwitch.RenderTransform>
         </local:ToggleSwitch>
-        <local:ToggleSwitch x:Name="DOWN" HorizontalAlignment="Left" Height="47" Margin="18,-15,-41,-32" VerticalAlignment="Top" Width="23" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="DOWN_MouseLeftButtonDown_1" >
+        <local:ToggleSwitch x:Name="UP" HorizontalAlignment="Left" Height="46" Margin="-1,-11,-21,-35" VerticalAlignment="Top" Width="22" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="UP_MouseLeftButtonDown_1">
             <local:ToggleSwitch.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -27,7 +27,7 @@
                 </TransformGroup>
             </local:ToggleSwitch.RenderTransform>
         </local:ToggleSwitch>
-        <local:ToggleSwitch x:Name="UP" HorizontalAlignment="Left" Height="46" Margin="18,21,-41,-67" VerticalAlignment="Top" Width="22" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="UP_MouseLeftButtonDown_1">
+        <local:ToggleSwitch x:Name="DOWN" HorizontalAlignment="Left" Height="46" Margin="-1,20,-21,-66" VerticalAlignment="Top" Width="22" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="DOWN_MouseLeftButtonDown_1">
             <local:ToggleSwitch.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
