--- a/Ambush/MainWindow.xaml
+++ b/Ambush/MainWindow.xaml
@@ -6,10 +6,27 @@
         xmlns:local="clr-namespace:Ambush"
         xmlns:UserControls="clr-namespace:Ambush.UserControls" xmlns:Utils="clr-namespace:Ambush.Utils" x:Class="Ambush.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1172.191" Width="1955.337">
-    <Grid>
-        <UserControls:DoorSketch HorizontalAlignment="Left" Height="493" Margin="55,10,0,0" VerticalAlignment="Top" Width="738"/>
-
+        Title="MainWindow" Height="1172.191" Width="1955.337" >
+    <Grid Background="#FFB3B3B3">
+        <UserControls:DoorSketch HorizontalAlignment="Left" Height="491" Margin="1332,10,-185,0" VerticalAlignment="Top" Width="800"/>
+        <Button x:Name="setTriggers" Content="Set triggers" HorizontalAlignment="Left" Margin="127,186,0,0" VerticalAlignment="Top" Width="99" Height="33" Click="SetTriggers_Click"/>
+        <Button x:Name="RPISettings" Content="RPI settings" HorizontalAlignment="Left" Margin="127,131,0,0" VerticalAlignment="Top" Width="99" Height="33" Click="RPISettings_Click"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="239" Margin="21,38,0,0" VerticalAlignment="Top" Width="319"/>
+        <Label Content="Initiating settings" HorizontalAlignment="Left" Margin="108,66,0,0" VerticalAlignment="Top" Height="40" Width="150" FontSize="18"/>
+        <UserControls:RPIStatus HorizontalAlignment="Left" Height="98" Margin="21,320,0,0" VerticalAlignment="Top" Width="481" />
+        <Label Content="Select game level" HorizontalAlignment="Left" Margin="629,107,0,0" VerticalAlignment="Top" Width="156" FontSize="16" Height="42"/>
+        <ComboBox Name="GameLevel" HorizontalAlignment="Left" Margin="782,116,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem Content="Easy"/>
+            <ComboBoxItem Content="Medium"/>
+            <ComboBoxItem Content="Hard"/>
+        </ComboBox>
+        <Button x:Name="startGame" Content="Start" HorizontalAlignment="Left" Margin="629,163,0,0" VerticalAlignment="Top" Width="273" Click="StartGame_Click"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="209" Margin="608,94,0,0" VerticalAlignment="Top" Width="318"/>
+        <Label Content="Start new game" HorizontalAlignment="Left" Margin="694,49,0,0" VerticalAlignment="Top" Height="40" Width="156" FontSize="20"/>
+        <TextBox x:Name ="TimerDisplay" HorizontalAlignment="Left" Height="23" Margin="782,241,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Time elapsed" HorizontalAlignment="Left" Margin="629,235,0,0" VerticalAlignment="Top" Width="119" FontSize="16" Height="42"/>
+        <Button Content="Check" HorizontalAlignment="Left" Margin="833,405,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button x:Name="stopGame" Content="Stop" HorizontalAlignment="Left" Margin="629,192,0,0" VerticalAlignment="Top" Width="273" RenderTransformOrigin="-1.56,0.3" Click="StopGame_Click"/>
     </Grid>
 
 
