--- a/Ambush/UserControls/RPIStatus.xaml
+++ b/Ambush/UserControls/RPIStatus.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ambush.UserControls"
-             mc:Ignorable="d" Height="66" Width="539">
-    <Grid Background="#FFB3B3B3" Margin="0,0,101,-34" RenderTransformOrigin="0.5,0.5">
+             mc:Ignorable="d" Height="136" Width="424">
+    <Grid  Margin="0,10,10,10" RenderTransformOrigin="0.5,0.5">
         <Grid.RowDefinitions>
             <RowDefinition Height="10*"/>
             <RowDefinition/>
@@ -19,12 +19,12 @@
             </TransformGroup>
         </Grid.RenderTransform>
 
-        <StackPanel Name="RpiButtons" Margin="30,15,-30,10" Orientation="Horizontal" >
-            <Button x:Name="rpi1"  Content="RPI1" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="76" Height="65" IsEnabled="True" />
-            <Button x:Name="rpi2" Content="RPI2" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True"/>
-            <Button x:Name="rpi3" Content="RPI3" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True"/>
-            <Button x:Name="rpi4" Content="RPI4" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True"/>
-            <Button x:Name="rpi5" Content="RPI5" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True"/>
+        <StackPanel Name="RpiButtons" Margin="18,10,0,-11" Orientation="Horizontal" HorizontalAlignment="Left" Width="386" Grid.RowSpan="2" >
+            <Button Style="{DynamicResource RoundCorner}" x:Name="rpi1"  Content="RPI1" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="76" Height="65" IsEnabled="True" Foreground="White" />
+            <Button Style="{DynamicResource RoundCorner}" x:Name="rpi2" Content="RPI2" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True" Foreground="White"/>
+            <Button Style="{DynamicResource RoundCorner}" x:Name="rpi3" Content="RPI3" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True" Foreground="White"/>
+            <Button Style="{DynamicResource RoundCorner}" x:Name="rpi4" Content="RPI4" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True" Foreground="White"/>
+            <Button Style="{DynamicResource RoundCorner}" x:Name="rpi5" Content="RPI5" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Stretch" Width="75" Height="65" IsEnabled="True" Foreground="White"/>
         </StackPanel>
     </Grid>
 
