--- a/Ambush/UserControls/Door.xaml
+++ b/Ambush/UserControls/Door.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Ambush.UserControls"
              mc:Ignorable="d" Height="70.625" Width="35.875">
     <Grid Margin="0,10,558,371">
-        <Ellipse Fill="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" HorizontalAlignment="Left" Height="71" Margin="-1,-10,-40,-61" VerticalAlignment="Top" Width="41"/>
+        <!--<Ellipse Fill="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" HorizontalAlignment="Left" Height="71" Margin="-1,-10,-40,-61" VerticalAlignment="Top" Width="41"/>-->
         <local:ToggleSwitch x:Name="MIDDLE" HorizontalAlignment="Left" Height="46" Margin="-1,4,-21,-50" VerticalAlignment="Top" Width="22" RenderTransformOrigin="0.5,0.5" MouseLeftButtonDown="MIDDLE_MouseLeftButtonDown_1">
             <local:ToggleSwitch.RenderTransform>
                 <TransformGroup>
